client id and secret to be included

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,4 @@
 OPENAI_API_KEY="YOUR-OPENAI-API-KEY"
 RAPIDAPI_KEY="YOUR-RAPID-API-KEY"
+CLIENT_ID="CIENT_ID_PLACEHOLDER"
+CLIENT_SECRET="CLIENT_SECRET_PLACEHOLDER"
