--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,4 @@ OPENAI_API_KEY="YOUR-OPENAI-API-KEY"
 RAPIDAPI_KEY="YOUR-RAPID-API-KEY"
 CLIENT_ID="CIENT_ID_PLACEHOLDER"
 CLIENT_SECRET="CLIENT_SECRET_PLACEHOLDER"
+SENDGRID_API_KEY="sENDGRID_API_KEY_PLACEHOLDER"
