--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -25,6 +25,7 @@ distro==1.9.0
 dnspython==2.7.0
 durationpy==0.10
 ecdsa==0.19.1
+email_validator==2.2.0
 executing==2.2.0
 fastapi==0.115.9
 filelock==3.18.0
