--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,6 +2,8 @@ OPENAI_API_KEY="YOUR-OPENAI-API-KEY"
 RAPID_API_KEY="YOUR-RAPID-API-KEY"
 SPOTIFY_CLIENT_ID="CIENT_ID_PLACEHOLDER"
 SPOTIFY_CLIENT_SECRET="CLIENT_SECRET_PLACEHOLDER"
-MONGODB_URL="MONGO_DB_URL"
-DATABASE_NAME="DATABASE_NAME" # mindfuel
-SENDGRID_API_KEY="sENDGRID_API_KEY_PLACEHOLDER"
+MONGODB_URL="MONGO-DB-URL"
+DATABASE_NAME="DATABASE-NAME" # mindfuel
+MONGODB_DB_NAME="DATABASE-NAME" # mindfuel
+SENDGRID_API_KEY="sENDGRID-API-KEY-PLACEHOLDER"
+YOUTUBE_API_KEY="YOUR-YOUTUBE-API-KEY"
