--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ annotated-types==0.7.0
 anyio==4.9.0
 asgiref==3.8.1
 asttokens==3.0.0
+asyncio-mqtt==0.16.1
 attrs==25.3.0
 backoff==2.2.1
 bcrypt==4.3.0
@@ -34,22 +35,27 @@ frozenlist==1.7.0
 fsspec==2025.5.1
 google-auth==2.40.3
 googleapis-common-protos==1.70.0
+googletrans==4.0.2
 greenlet==3.2.3
 grpcio==1.73.0
 h11==0.16.0
+h2==4.2.0
 hf-xet==1.1.3
+hpack==4.1.0
 httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
 httpx-sse==0.4.0
 huggingface-hub==0.32.5
 humanfriendly==10.0
+hyperframe==6.1.0
 idna==3.10
 importlib_metadata==8.7.0
 importlib_resources==6.5.2
 ipykernel==6.29.5
 ipython==9.3.0
 ipython_pygments_lexers==1.1.1
+isodate==0.7.2
 jedi==0.19.2
 jiter==0.10.0
 jsonpatch==1.33
@@ -99,6 +105,7 @@ orjson==3.10.18
 ormsgpack==1.10.0
 overrides==7.7.0
 packaging==24.2
+paho-mqtt==2.1.0
 parso==0.8.4
 passlib==1.7.4
 pexpect==4.9.0
@@ -166,7 +173,3 @@ xxhash==3.5.0
 yarl==1.20.1
 zipp==3.23.0
 zstandard==0.23.0
-sendgrid
-googletrans
-email_validator==2.2.0
-asyncio-mqtt==0.16.1 
