--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,3 +7,7 @@ DATABASE_NAME="DATABASE-NAME" # mindfuel
 MONGODB_DB_NAME="DATABASE-NAME" # mindfuel
 SENDGRID_API_KEY="sENDGRID-API-KEY-PLACEHOLDER"
 YOUTUBE_API_KEY="YOUR-YOUTUBE-API-KEY"
+LANGSMITH_TRACING=true
+LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
+LANGSMITH_API_KEY="YOUR-LANGSMITH-API-KEY"
+LANGSMITH_PROJECT="YOUR-LANGSMITH-PROJECT-NAME"
