--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -162,7 +162,7 @@ typing-inspection==0.4.1
 typing_extensions==4.14.0
 urllib3==2.4.0
 uvicorn==0.34.3
-uvloop==0.21.0
+uvloop==0.21.0; sys_platform != 'win32'
 watchfiles==1.0.5
 wcwidth==0.2.13
 websocket-client==1.8.0
