--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -66,6 +66,7 @@ jupyter_client==8.6.3
 jupyter_core==5.8.1
 kubernetes==33.1.0
 langchain==0.3.25
+langchain-chroma==0.2.4
 langchain-community==0.3.24
 langchain-core==0.3.64
 langchain-openai==0.3.21
