--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -65,11 +65,11 @@ jsonschema-specifications==2025.4.1
 jupyter_client==8.6.3
 jupyter_core==5.8.1
 kubernetes==33.1.0
-langchain==0.3.25
+langchain==0.3.26
 langchain-chroma==0.2.4
-langchain-community==0.3.24
-langchain-core==0.3.64
-langchain-openai==0.3.21
+langchain-community==0.3.26
+langchain-core==0.3.66
+langchain-openai==0.3.27
 langchain-text-splitters==0.3.8
 langgraph==0.4.8
 langgraph-checkpoint==2.0.26
@@ -91,7 +91,7 @@ nest-asyncio==1.6.0
 numpy==2.3.0
 oauthlib==3.2.2
 onnxruntime==1.22.0
-openai==1.85.0
+openai==1.93.0
 opentelemetry-api==1.34.1
 opentelemetry-exporter-otlp-proto-common==1.34.1
 opentelemetry-exporter-otlp-proto-grpc==1.34.1
@@ -126,6 +126,7 @@ pydantic-settings==2.9.1
 pydantic_core==2.33.2
 Pygments==2.19.1
 pymongo==4.7.3
+pypdf==5.6.1
 PyPika==0.48.9
 pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
