--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ asyncio-mqtt==0.16.1
 attrs==25.3.0
 backoff==2.2.1
 bcrypt==4.3.0
+beautifulsoup4==4.13.4
 build==1.2.2.post1
 cachetools==5.5.2
 certifi==2025.4.26
@@ -134,6 +135,7 @@ python-dotenv==1.1.0
 python-http-client==3.3.7
 python-jose==3.5.0
 python-multipart==0.0.20
+pytz==2025.2
 PyYAML==6.0.2
 pyzmq==26.4.0
 referencing==0.36.2
@@ -148,6 +150,7 @@ sendgrid==6.12.4
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
+soupsieve==2.7
 SQLAlchemy==2.0.41
 stack-data==0.6.3
 starlette==0.45.3
@@ -170,9 +173,9 @@ wcwidth==0.2.13
 websocket-client==1.8.0
 websockets==15.0.1
 Werkzeug==3.1.3
+wikipedia==1.4.0
 wrapt==1.17.2
 xxhash==3.5.0
 yarl==1.20.1
 zipp==3.23.0
 zstandard==0.23.0
-wikipedia
